Update link color to fix WCAG AA failure due to low contrast

--- a/src/assets/main.css
+++ b/src/assets/main.css
@@ -5,7 +5,7 @@
   --header-fg-color: #ffffff;
   --footer-bg-color: #fff6fa;
 
-  --link-color: #007EB4;
+  --link-color: #0079AD;
   --link-visited-color: #312783;
   --link-hover-color: #2f3590;
 
